# petulant-beard-archer

./: .gitignore  .travis.yml  ChangeLog  Makefile.am  README.md  aclocal.m4  compile.sh  config.h.in  configure.ac  libtool
iface/: window-gtk2.glade  window.glade
octave/: zoom.m  zoom_func.m
src/: cli.h  gtk_gui.cc  gtk_gui.h  main.cc  photogrammetry_window.h  viewer.h
src/core/: image.h  point2d.h  scene.h  transform2d.h
src/core/point2d/: indexable.h
src/core/transform2d/: at_origin.h  base.h  bisection_unscale.h  combination.h  scaling.h  transform.h  translation.h
src/gtk_gui/: blank_renderer.cc  blank_renderer.h  gtk_gui.cc  gtk_gui.h  image_chooser.cc  image_chooser.h  image_view_controller.cc  image_view_controller.h  image_view_renderer.cc  image_view_renderer.h  memory.h  photogrammetry_window.cc  photogrammetry_window.h  renderer.cc  renderer.h  viewer.cc  viewer.h  viewer_controller.cc  viewer_controller.h  viewer_widget.cc  viewer_widget.h
src/gtk_gui/viewer/: blank_renderer.cc  blank_renderer.h  controller.cc  controller.h  renderer.cc  renderer.h  widget_controllable.cc  widget_controllable.h
src/gtk_gui/viewer/correspondence_view/: controller.h  controller_impl.h  renderer.cc  renderer.h
src/gtk_gui/viewer/image_view/: controller.cc  controller.h  controller_impl.h  image_controller.h  image_point_index_mixin.h  image_point_index_mixin_impl.h  point_view_params.h  renderer.cc  renderer.h  selection.h  transforms.h  transforms_impl.h
src/importers/: base.cc  base.h  insight3d.cc  insight3d.h
test/files/: test0.i3d
test/gtk_gui/viewer/image_view/: controller.cc  controller_create_point.cc  controller_drag_point.cc  controller_select_another_point.cc  controller_select_point.cc  controller_select_rectangle.cc
test/importers/: insight3d.cc
test/support/gtk_gui/viewer/: fake_controllable.cc  fake_controllable.h
test/support/gtk_gui/viewer/image_view/: controller_test_helpers.h  fake_renderer.cc  fake_renderer.h
